fix: use stable scrollbar gutter

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,6 +2,7 @@
   html {
     color-scheme: light;
     scrollbar-color: theme(colors.stone.400) transparent;
+    scrollbar-gutter: stable;
   }
 
   body {
